@@ -13,15 +13,28 @@ RUN apt update && \
     rm -f gradle-${GV}-bin.zip && \
     ./gradle-${GV}/bin/gradle assemble --no-daemon
 
-FROM ibm-semeru-runtimes:open-17-jre
+RUN jlink \
+         --add-modules ALL-MODULE-PATH \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /javaruntime
+
+FROM debian:stable-slim
 
 ADD https://github.com/tianon/gosu/releases/download/1.14/gosu-amd64 /bin/gosu
+COPY ./utils/docker-entrypoint.sh /bin
 
 RUN cp /usr/share/zoneinfo/Europe/Moscow /etc/localtime && \
-    echo "Europe/Moscow" > /etc/timezone
+    echo "Europe/Moscow" > /etc/timezone && \
+    chmod +x /bin/docker-entrypoint.sh
 
-COPY ./utils/docker-entrypoint.sh /bin
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
+COPY --from=builder /javaruntime $JAVA_HOME
+
 COPY --from=builder --chown=nobody:nogroup /workspace/build/libs/*.jar /workspace/spodlivoi.jar
 
 WORKDIR /workspace
-ENTRYPOINT /bin/bash /bin/docker-entrypoint.sh
+ENTRYPOINT /bin/docker-entrypoint.sh
